# BraccioShapeTracer

./: README.md
GPT_Code/: pentagon.py
braccio_description/: CMakeLists.txt  package.xml
braccio_description/launch/: kr5_upload.launch
braccio_description/urdf/: braccio_model.urdf  braccio_model.urdf_backup  braccio_planning_model.urdf
braccio_description/urdf/xacros/: braccio_arm.xacro
braccio_moveit_config/: package.xml
braccio_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  manipulator.srdf  ompl_planning.yaml
braccio_moveit_config/launch/: demo.launch  fake_moveit_controller_manager.launch.xml  manipulator_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  start_moveit_connected_with_gz.launch  trajectory_execution.launch.xml  warehouse.launch
braccio_moveit_gazebo/: CMakeLists.txt  package.xml
braccio_moveit_gazebo/config/: arm_controller_kr5.yaml
braccio_moveit_gazebo/launch/: connect.launch  controller_utils.launch  rviz_connected_with_gz_using_moveit.launch
braccio_moveit_gazebo/parse_and_publish/: parse_and_publish.cpp
braccio_moveit_gazebo/scripts/: new_backup_target_object_sim.py  results_analysis.ipynb  target_object_sim.py  target_object_sim.py_backup1  target_object_sim.py_new_arm3  target_object_sim_backup.py
braccio_moveit_gazebo/worlds/: bowl.dae  (+3 more)
doc/: triangle.ogv
